<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="username">username</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="funky_dog">Funky Dog</string>
    <string name="spa_dog">Spa Dog</string>
    <string name="tired_dog">Tired Dog</string>
    <string name="happy_dog">Happy Dog</string>
    <string name="title_activity_login_successful">Leanback Title</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>


</resources>